--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,18 +3,19 @@
 steps:
   # Build app
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '.', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/hello-world-python/hello-world-python:${COMMIT_SHA}', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/hello-world-python/hello-world-python','-f', 'Dockerfile']
+    args: ['build', '.', '-t', 'us-central1-docker.pkg.dev/darioenv-learning-nonprod/hello-world-python/hello-world-python:${COMMIT_SHA}', '-t', 'us-central1-docker.pkg.dev/$
+    T_ID/hello-world-python/hello-world-python','-f', 'Dockerfile']
     dir: 'app'  
     id: build
   # Run unit tests
-  - name: us-central1-docker.pkg.dev/$PROJECT_ID/hello-world-python/hello-world-python
+  - name: us-central1-docker.pkg.dev/darioenv-learning-nonprod/hello-world-python/hello-world-python
     entrypoint: python
     args: ["-m","pytest","unit_tests.py"]
     dir: 'app'
     id: test
   # Push docker image and save image digest for kritis check
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/hello-world-python/hello-world-python']
+    args: ['push', 'us-central1-docker.pkg.dev/darioenv-learning-nonprod/hello-world-python/hello-world-python']
     id: push
   # Create release in Google Cloud Deploy
   - name: gcr.io/google.com/cloudsdktool/cloud-sdk
@@ -25,5 +26,5 @@ steps:
         "--delivery-pipeline", "hello-world-python-pipeline",
         "--region", "us-central1",
         "--annotations", "commitId=${REVISION_ID}",
-        "--images", "hello-world-python=us-central1-docker.pkg.dev/$PROJECT_ID/hello-world-python/hello-world-python:${COMMIT_SHA}"
+        "--images", "hello-world-python=us-central1-docker.pkg.dev/darioenv-learning-nonprod/hello-world-python/hello-world-python:${COMMIT_SHA}"
       ]
